--- a/just-practice/cards.html
+++ b/just-practice/cards.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dogs</title>
     <style>
+        .container {
+            margin-top: 50px;
+            display: grid;
+            grid-template-columns: 250px 250px 250px;
+            column-gap: 30px;
+            text-align: center;
+            justify-content: center;
+        }
+
         .container > div {
-            display: inline-block;
-            margin-right: 20px;
             box-shadow: 0px 0px 10px gray;
         }
 
@@ -36,10 +43,6 @@
             margin-left: 10px;
         }
 
-        .container {
-            text-align: center;
-            margin-top: 50px;
-        }
     </style>
 </head>
 <body>
