finish up sidebar

--- a/yt-clone/youtube.html
+++ b/yt-clone/youtube.html
@@ -33,7 +33,30 @@
     </div>
     
     <div class="sidebar">
-        sidebar
+        <div class="s-link">
+            <img class="link-image" src="https://supersimple.dev/exercises/youtube/icons/home.svg" alt="">
+            Home
+        </div>
+        <div class="s-link">
+            <img class="link-image" src="https://supersimple.dev/exercises/youtube/icons/explore.svg" alt="">
+            Explore
+        </div>
+        <div class="s-link">
+            <img class="link-image" src="https://supersimple.dev/exercises/youtube/icons/subscriptions.svg" alt="">
+            Subscriptions
+        </div>
+        <div class="s-link">
+            <img class="link-image" src="https://supersimple.dev/exercises/youtube/icons/originals.svg" alt="">
+            Originals
+        </div>
+        <div class="s-link">
+            <img class="link-image" src="https://supersimple.dev/exercises/youtube/icons/youtube-music.svg" alt="">
+            Music
+        </div>
+        <div class="s-link">
+            <img class="link-image" src="https://supersimple.dev/exercises/youtube/icons/library.svg" alt="">
+            Library
+        </div>
     </div>
 
     <div class="video-container">
